<resources>
    <string name="app_name">BudgetTracker</string>
    <string name="sign_in">Sign In</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="create_account">Create Account</string>
    <string name="add_expense">Add Expense</string>
    <string name="add_transaction">Add Transaction</string>
    <string name="name_hint">Name</string>
    <string name="welcome">Welcome,</string>
    <string name="add_expense_details">Add Expense Details</string>
    <string name="title_hint">Title</string>
    <string name="amount_hint">Amount</string>
    <string name="description_hint">Description</string>
    <string name="submit">Submit</string>
    <string name="save">Save</string>
    <string name="date_hint">Date</string>
    <string name="select_date">Select date</string>
    <string name="recent_transactions">Recent transactions</string>
    <string name="category">Category</string>
    <string name="total_balance">Total Balance</string>
    <string name="income">Income</string>
    <string name="budget_goals">Budget Goals</string>
    <string name="edit_transaction">Edit Transaction</string>
    <string name="remove_transaction">Remove Transaction</string>
    <string name="or">or</string>
    <string name="krystal">Krystal</string>
    <string name="app_desc">Track. Manage. Budget.</string>
    <string name="log_out">Log Out</string>
    <string name="empty_password">Please enter a password</string>
    <string name="empty_email">Please enter a email</string>
    <string name="error">Error</string>
</resources>